<?xml version="1.0"?>
<package format="2">
  <name>clahe_ros</name>
  <version>0.0.0</version>
  <description>The clahe_ros package</description>
  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
